<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project default="delivery" name="jettywiki">
	<!-- <property name="genomelibpath" value="C:/Users/roger/d/dhl/genome/genome-core/dev/web/genome/WEB-INF/lib" />
	<property name="poplibpath" value="C:/Users/roger/d/dhl/DHL-POP/DHL-ParcelOnlinePostage/dev/popweb/WEB-INF/lib" />
	<property name="gwikicontent" value="C:/Users/roger/d/dhl/DHL-POP/DHL-ParcelOnlinePostage/dev/extrc/gwiki" />
	
	<property name="genomesrcpath" value="C:/Users/roger/d/dhl/DHL-POP/DHL-ParcelOnlinePostage/dev/genome/src" />
	-->
	<property name="gwikiweb" value="dev/gwikiweb" />
	<property name="gwikicontent" value="dev/gwiki" />
	<property name="gwikiversion" value="0.3.3" />
	<property name="distdir" value="gwikiweb-${gwikiversion}" />
	<property name="warfile" value="gwikiweb.war" />

	<path id="classPath">
		<fileset dir="${gwikiweb}/WEB-INF/lib">
			<include name="*.jar" />
		</fileset>
		<fileset dir="dev/lib">
			<include name="*.jar" />
		</fileset>
		<fileset dir="dev/lib/test">
			<include name="*.jar" />
		</fileset>
		<fileset dir="dev/lib/jetty7">
			<include name="*.jar" />
		</fileset>
		<fileset dir="dev/lib/jetty7/jsp">
			<include name="*.jar" />
		</fileset>
		<fileset dir="dev/lib/test">
			<include name="*.jar" />
		</fileset>
		<pathelement path="${gwikiweb}/WEB-INF/classes" />
	</path>
	<path id="testClassPath">
		<path refid="classPath" />
		<pathelement location="target/test-classes" />
	</path>

	<target name="compile-war" description="compile sources">

		<mkdir dir="${gwikiweb}/WEB-INF/classes" />
		<mkdir dir="target/gwiki-jetty-classes" />
		<javac source="1.5" target="1.5" debug="true" srcdir="src/genome/java" sourcepath="src/genome/java" destdir="${gwikiweb}/WEB-INF/classes" encoding="UTF-8" classpathref="classPath" optimize="true" />
		<javac source="1.5" target="1.5" debug="true" srcdir="src/gwiki/java" sourcepath="src/gwiki/java" destdir="${gwikiweb}/WEB-INF/classes" encoding="UTF-8" classpathref="classPath" optimize="true" />
		<copy todir="${gwikiweb}/WEB-INF/classes">
			<fileset dir="src/gwiki/resources">
				<include name="**/*" />
				<exclude name="**/.svn" />
			</fileset>
		</copy>
		<javac source="1.5" target="1.5" debug="true" srcdir="src/gwiki-jetty/java" sourcepath="src/gwiki-jetty/java" destdir="target/gwiki-jetty-classes" encoding="UTF-8" classpathref="classPath" optimize="true" />
	</target>

	<target name="compile-tests" description="compile testcases" depends="compile-war">
		<mkdir dir="target/test-classes" />
		<javac source="1.5" target="1.5" debug="true" srcdir="src/test/java" sourcepath="src/test/java" destdir="target/test-classes" encoding="UTF-8" classpathref="testClassPath" optimize="true" />
		<copy todir="target/test-classes">
			<fileset dir="src/test/resources">
				<include name="**/*" />
				<exclude name="**/.svn" />
			</fileset>
		</copy>
	</target>

	<target name="clean">
		<delete includeemptydirs="true" quiet="true">
			<fileset dir="delivery" includes="**/*" />
		</delete>
		<delete failonerror="true" dir="${gwikiweb}/WEB-INF/classes" />
		<delete failonerror="true" dir="target/gwiki-jetty-classes" />
		<delete failonerror="true" dir="target/test-classes" />
	</target>

	<target name="test" description="execute tests" depends="compile-tests">
		<delete includeemptydirs="true" quiet="true">
			<fileset dir="target/ant-junit-reports" includes="**/*" />
		</delete>
		<mkdir dir="target/ant-junit-reports" />
		<junit timeout="3600000" showoutput="true" fork="true">
			<!-- forkmode="perTest" -->
			<jvmarg value="-Djava.awt.headless=true" />
			<!-- <jvmarg value="-XX:MaxPermSize=356M" />
			<jvmarg value="-Xms512m" />
			<jvmarg value="-Xmx712m" />
			-->
			<classpath refid="classPath" />
			<classpath refid="testClassPath" />
			<batchtest fork="true" todir="target/ant-junit-reports">
				<formatter type="xml" />
				<fileset dir="src/test/java">
					<include name="**/*Test.java" />
					<exclude name="**/FileSystemTest.java" />
					<exclude name="**/GWikiPlayZoneTest.java" />
				</fileset>
			</batchtest>
		</junit>
	</target>

	<target name="build-war" description="build war file" depends="compile-tests">
		<war webxml="${gwikiweb}/WEB-INF/web.xml" destfile="target/${warfile}">
			<fileset dir="${gwikiweb}">
				<exclude name="WEB-INF/web.xml" />
				<exclude name="**/*.bak" />
				<exclude name="test/**/*" />
			</fileset>
		</war>
	</target>
	<target name="delivery" description="build standalone wiki" depends="build-war,gwikilib,copy.webcontent,copy.wikiweb,gwikidistr">
	</target>
	<target name="gwikidistr" description="build runtime distribution">
		<copy todir="delivery/${distdir}">
			<fileset dir="dev/gwikistandalone">
				<include name="*.*" />
			</fileset>
		</copy>
		<delete file="delivery/$/gwikiweb-${gwikiversion}.zip" />
		<zip destfile="delivery/gwikiweb-${gwikiversion}.zip" basedir="delivery">
			<fileset dir="delivery/${distdir}">
				<include name="${distdir}/**" />
				<exclude name="delivery/gwikiweb-${gwikiversion}.zip" />
			</fileset>
		</zip>
	</target>
	<target name="gwikilib" description="build gwikilib">
		<delete dir="delivery/${distdir}/lib" failonerror="false" />
		<mkdir dir="delivery/${distdir}/lib" />
		<copy todir="delivery/${distdir}/lib">
			<fileset dir="${gwikiweb}/WEB-INF/lib">
				<include name="*.jar" />
			</fileset>
			<fileset dir="dev/lib/jetty7">
				<include name="*.jar" />
			</fileset>
			<fileset dir="dev/lib/jetty7/jsp">
				<include name="*.jar" />
			</fileset>
		</copy>
		<jar destfile="delivery/${distdir}/lib/genome-gwiki-${gwikiversion}.jar">
			<fileset dir="${gwikiweb}/WEB-INF/classes" />
		</jar>

		<jar destfile="delivery/${distdir}/jettygwiki-${gwikiversion}.jar">
			<manifest>
				<attribute name="Main-Class" value="de.micromata.genome.gwiki.jetty.GWikiJettyStarter" />
				<attribute name="Class-Path" value=".
									lib/genome-gwiki-${gwikiversion}.jar
									lib/jetty-ajp-7.0.0.v20091005.jar 
									lib/jetty-annotations-7.0.0.v20091005.jar 
									lib/jetty-client-7.0.0.v20091005.jar 
									lib/jetty-continuation-7.0.0.v20091005.jar 
									lib/jetty-deploy-7.0.0.v20091005.jar 
									lib/jetty-http-7.0.0.v20091005.jar 
									lib/jetty-io-7.0.0.v20091005.jar 
									lib/jetty-jmx-7.0.0.v20091005.jar 
									lib/jetty-jndi-7.0.0.v20091005.jar 
									lib/jetty-plus-7.0.0.v20091005.jar 
									lib/jetty-policy-7.0.0.v20091005.jar 
									lib/jetty-rewrite-7.0.0.v20091005.jar 
									lib/jetty-security-7.0.0.v20091005.jar 
									lib/jetty-server-7.0.0.v20091005.jar 
									lib/jetty-servlet-7.0.0.v20091005.jar 
									lib/jetty-servlets-7.0.0.v20091005.jar 
									lib/jetty-util-7.0.0.v20091005.jar 
									lib/jetty-webapp-7.0.0.v20091005.jar 
									lib/jetty-xml-7.0.0.v20091005.jar 
									lib/servlet-api-2.5.jar 
									lib/core-3.1.1.jar 
									lib/jetty-jsp-2.1-7.0.0.v20091005.jar
									lib/jsp-2.1-glassfish-9.1.1.B60.25.p2.jar 
									lib/jsp-api-2.1-glassfish-9.1.1.B60.25.p2.jar 
									lib/activation-1.1.jar 
									lib/annotations.jar 
									lib/mail-1.4.jar 
									lib/nekohtml-1.9.13.jar 
									lib/milton-api-1.4.2.jar 
									lib/milton-console-1.4.2.jar 
									lib/milton-filesystem-1.4.2.jar 
									lib/milton-ftp-1.4.2.jar 
									lib/milton-json-1.4.2.jar 
									lib/milton-servlet-1.4.2.jar 
									lib/javamail-1.3.2.jar 
									lib/antlr-2.7.6.jar 
									lib/asm-2.2.3.jar
									lib/asm-analysis-2.2.jar 
									lib/asm-tree-2.2.jar 
									lib/asm-util-2.2.jar 
									lib/bcprov-jdk15-140.jar 
									lib/cglib-nodep-2.1_3.jar 
									lib/collections-generic-4.01.jar 
									lib/commons-beanutils-1.7.0.jar 
									lib/commons-codec-1.3.jar 
									lib/commons-collections-3.2.jar 
									lib/commons-dbcp-1.2.1.jar 
									lib/commons-digester-1.8.jar 
									lib/commons-fileupload-1.2.1.jar 
									lib/commons-httpclient-3.1.jar 
									lib/commons-io-1.4.jar 
									lib/commons-logging-1.1.1.jar
									lib/commons-net-1.4.1.jar 
									lib/commons-pool-1.2.jar 
									lib/commons-validator-1.1.4.jar 
									lib/displaytag-1.1.1.jar 
									lib/dom4j-1.6.1.jar 
									lib/groovy-1.5.4.jar 
									lib/jakarta-oro-2.0.8.jar 
									lib/jdom.jar 
									lib/jstl-1.1.2.jar 
									lib/log4j-1.2.8.jar
									lib/spring-2.5.1.jar 
									lib/standard-1.1.2.jar 
									lib/struts-1.2.9.jar 
									lib/svnkit-1.1.7.jar 
									lib/xalan.jar 
									lib/xercesImpl-2.8.1.jar
									lib/xml-apis.jar 
									lib/xstream-1.2.2.jar 
									lib/commons-lang-2.4.jar
									lib/jhighlight-1.0.jar
									lib/poi-3.2-FINAL-20081019.jar
									lib/poi-contrib-3.2-FINAL-20081019.jar
									lib/poi-scratchpad-3.2-FINAL-20081019.jar
									lib/pdfbox-0.8.0-incubating.jar
									lib/iText-2.1.4.jar
					" />
			</manifest>
			<fileset dir="target/gwiki-jetty-classes" />
		</jar>
	</target>

	<target name="preparetarget">
		<delete dir="delivery/${distdir}" failonerror="false" />
		<mkdir dir="delivery/${distdir}" />
	</target>
	<!-- 
	<target name="copy.genomesrcfrompop" description="copy necessary java sources from pop">
		<copy todir="src/genome">
			<fileset dir="${genomesrcpath}">
				<include name="de/micromata/genome/util/matcher/**/*.java" />
				<exclude name="de/micromata/genome/util/matcher/cls/ClassMatcherBuilder.java" />
				<exclude name="de/micromata/genome/util/matcher/cls/JUnit3TestCaseMatcher.java" />
				<include name="de/micromata/genome/util/types/**/*.java" />
				<exclude name="de/micromata/genome/util/types/DateUtils.java" />
				<include name="de/micromata/genome/util/runtime/**/*.java" />
				<exclude name="de/micromata/genome/util/runtime/PluginContext.java" />
				<exclude name="de/micromata/genome/util/runtime/PluginCallback.java" />
				<include name="de/micromata/genome/util/text/**/*.java" />
				<include name="de/micromata/genome/util/bean/**/*.java" />
				<include name="de/micromata/genome/util/xml/**/*.java" />
				<include name="de/micromata/genome/dao/db/StdRecordDO.java" />
				<include name="de/micromata/genome/util/web/MimeUtils.java" />
			</fileset>
		</copy>
	</target>
-->



	<target name="copy.webcontent" description="copy webcontent">
		<!-- GWIKI -->
		<delete dir="delivery/${distdir}/gwiki" />
		<mkdir dir="delivery/${distdir}/gwiki" />
		<copy todir="delivery/${distdir}/gwiki">
			<fileset dir="${gwikicontent}">
				<exclude name="**/arch/**" />
				<exclude name="tmp/**" />
				<exclude name="pop/**" />
				<exclude name="beispiele/**" />
				<exclude name="samples/**" />
				<exclude name="test/**" />
				<exclude name="imp/**" />
				<exclude name="gwikiimptest/**" />
				<exclude name="**/genomehb/**" />
				<exclude name="admin/user/**" />
				<exclude name="home/**" />
				<exclude name="inc/dhl2009/**" />
				<exclude name="inc/pop/**" />
				<exclude name="**/gwiki.jar" />
			</fileset>
		</copy>
		<copy todir="delivery/${distdir}/gwiki">
			<fileset dir="${gwikicontent}">
			</fileset>
		</copy>

	</target>

	<target name="copy.wikiweb" description="copy wikiweb">
		<!-- GWIKIWEB -->
		<delete dir="delivery/${distdir}/gwikiweb" />
		<mkdir dir="delivery/${distdir}/gwikiweb" />
		<copy todir="delivery/${distdir}/gwikiweb">
			<fileset dir="${gwikiweb}" excludes="**/src/**,**/src-genome/**,**/src-pop/**,**/WEB-INF/classes/**,**/WEB-INF/lib/**">
			</fileset>
		</copy>
	</target>
	<target name="Source.Distr" description="Baut komplette Source-Distribution">
		<delete dir="delivery/${distdir}-src" />
		<mkdir dir="delivery/${distdir}-src" />
		<copy todir="delivery/${distdir}-src">
			<fileset dir="">
				<include name="*.xml" />
				<include name=".*" />
			</fileset>
		</copy>
		<mkdir dir="delivery/${distdir}-src/src/standalone" />
		<copy todir="delivery/${distdir}-src/src/standalone">
			<fileset dir="src/standalone" />
		</copy>
		<mkdir dir="delivery/${distdir}-src/src/genome" />
		<copy todir="delivery/${distdir}-src/src/genome">
			<fileset dir="src/genome" />
		</copy>
		<mkdir dir="delivery/${distdir}-src/src/gwiki" />
		<copy todir="delivery/${distdir}-src/src/gwiki">
			<fileset dir="${gwikiweb}/src">
				<exclude name="**/.svn" />
			</fileset>
		</copy>

		<mkdir dir="delivery/${distdir}-src/dev" />
		<copy todir="delivery/${distdir}-src/dev">
			<fileset dir="dev" />
		</copy>
		<mkdir dir="delivery/${distdir}-src/gwikiweb" />
		<copy todir="delivery/${distdir}-src/gwikiweb">
			<fileset dir="delivery/${distdir}/gwikiweb" />
		</copy>


		<mkdir dir="delivery/${distdir}-src/gwiki" />
		<copy todir="delivery/${distdir}-src/gwiki">
			<fileset dir="delivery/${distdir}/gwiki" />
		</copy>

		<mkdir dir="delivery/${distdir}-src/lib" />
		<copy todir="delivery/${distdir}-src/lib">
			<fileset dir="lib" />
		</copy>
	</target>
</project>
